--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viwport"
+    <meta name="viewport"
           content="width=device-width, user-scalable=no, initisl-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Shop</title>
 </head>
 <body>
     <div id="main">
         <h1>Онлайн магазин</h1>
-        <img src="">
+        <img src="https://img.freepik.com/free-vector/set-of-healthy-dishes_1308-28386.jpg?w=1060&t=st=1684391711~exp=1684392311~hmac=8ba13db112170fcbbd977384653f4e2b06e01ad7325127bd260ec497eaac2d10">
         <p>llll</p>
         <button id="buy">Купить</button>
     </div>
